Updates hasura.yaml keywords

--- a/hasura.yaml
+++ b/hasura.yaml
@@ -1,4 +1,4 @@
 description: Blank template for a Hasura project
-keywords: base, getting-started
+keywords: python, flask, getting-started
 name: base
-platformVersion: v0.15.3
+platformVersion: v0.15.7
