--- a/clusters.yaml
+++ b/clusters.yaml
@@ -3,5 +3,5 @@
     configmap: controller-conf
     namespace: hasura
   data: null
-  kubeContext: h34-graveness34-stg
-  name: h34-graveness34-stg
+  kubeContext: coitus88
+  name: coitus88
