--- a/conf/routes.yaml
+++ b/conf/routes.yaml
@@ -159,10 +159,10 @@ notify:
     upstreamServicePath: /
     upstreamServicePort: 80
     corsPolicy: allow_all
-app:
+www:
   /:
     upstreamService:
-      name: app
+      name: www
       namespace: '{{ cluster.metadata.namespaces.user }}'
     upstreamServicePath: /
     upstreamServicePort: 80
