--- a/hasura.yaml
+++ b/hasura.yaml
@@ -1,4 +1,6 @@
-description: A starter kit for python-flask with a sample schema and integration with Hasura data APIs.
+description: A starter kit for python-flask with a sample schema and integration with
+  Hasura data APIs.
 keywords: python, flask, getting-started
+media: {}
 name: hello-python-flask
 platformVersion: v0.15.7
