base: modified notify conf

--- a/conf/notify.yaml
+++ b/conf/notify.yaml
@@ -9,6 +9,11 @@ email:
   # default can take values 'smtp' or 'sparkPost
   default: null
   providers:
+    mandrill:
+      apiKey:
+        secretKeyRef:
+          key: notify.mandrill.key
+          name: hasura-secrets
     smtp:
       hostname: ""
       password:
