--- a/conf/notify.yaml
+++ b/conf/notify.yaml
@@ -2,13 +2,18 @@
 #
 # All options are configured to read from the secret called hasura-secrets
 # To enable a provider:
-# 1. Add the required secrets. Checkout hasura secrets --help for more information
+# 1. Add the required secrets. Checkout `hasura secrets --help` for more information
 # 2. modify the default value to the provider that you want
 
 email:
   # default can take values 'smtp', 'sparkPost' or 'mandrill'
   default: null
   providers:
+    hasura:
+      authToken:
+        secretKeyRef:
+          key: notify.hasura.token
+          name: hasura-secrets
     mandrill:
       apiKey:
         secretKeyRef:
@@ -34,6 +39,11 @@ sms:
   # default can take values 'msg91' or 'twilio'
   default: null
   providers:
+    hasura:
+      authToken:
+        secretKeyRef:
+          key: notify.hasura.token
+          name: hasura-secrets
     msg91:
       from: ""
       authKey:
