disable email and mobile providers by default

--- a/conf/auth.yaml
+++ b/conf/auth.yaml
@@ -18,10 +18,10 @@ defaultProviders:
     enabled: "true"
     defaultRoles: []
   email:
-    enabled: "true"
+    enabled: "false"
     defaultRoles: []
   mobile:
-    enabled: "true"
+    enabled: "false"
     defaultRoles: []
   mobile-password:
     enabled: "false"
