--- a/clusters.yaml
+++ b/clusters.yaml
@@ -3,5 +3,5 @@
     configmap: controller-conf
     namespace: hasura
   data: null
-  kubeContext: coitus88
-  name: coitus88
+  kubeContext: cheviot86
+  name: cheviot86
