--- a/clusters.yaml
+++ b/clusters.yaml
@@ -12,3 +12,10 @@
   data: null
   kubeContext: boardroom80
   name: boardroom80
+- alias: danava
+  config:
+    configmap: controller-conf
+    namespace: accordance89-hasura
+  data: null
+  kubeContext: accordance89
+  name: accordance89
