--- a/hasura.yaml
+++ b/hasura.yaml
@@ -1,5 +1,6 @@
-description: A starter kit for python-flask with a sample schema and integration with Hasura data APIs.
-keywords: python, flask, getting-started
+description: A boilerplate project for python-flask with a sample schema and integration with Hasura data APIs.
+keywords: python, python3, flask, boilerplate
 media: {}
 name: hello-python-flask
-platformVersion: v0.15.7
+repoUrl: https://github.com/hasura/hello-python-flask
+platformVersion: v0.15.21
