Restructered the conf to the new format

--- a/conf/ci.yaml
+++ b/conf/ci.yaml
@@ -6,21 +6,26 @@ registry: {{ cluster.metadata.registry|json }}
 # remotes define which microservices has to be updated when code is pushed to the remote
 remotes:
   # Example:
-  
-  # remote-name:
-  #   namespace.service-name:
-  #     container-name:
-  #       path: microservices/app
-  #       dockerfile: microservices/app/Dockerfile
-  
+
+  # name: remote-name
+  # deployments:
+  # - name: deployment-name
+  #   namespace: deployment-namespace
+  #   containers:
+  #   - name: container-name:
+  #     dockerBuild:
+  #       contextPath: microservices/app
+  #       dockerfilePath: microservices/app/Dockerfile
+
   # Default remote to push code and configuration
-  {{ cluster.name }}:        # DO NOT edit this line
-    <<: {}                   # DO NOT edit this line
+- name: '{{ cluster.name }}'      # DO NOT edit this line
+  deployments:                  # DO NOT edit this line
 
-    '{{ cluster.metadata.namespaces.user }}.app':
-      app:
-        dockerfile: microservices/app/Dockerfile
-        path: microservices/app
-
-    # Add output of `hasura conf generate-remote` below this line
-
+  - containers:
+    - dockerBuild:
+        contextPath: microservices/app
+        dockerfilePath: microservices/app/Dockerfile
+      name: app
+    name: app
+    nameSpace: {{ cluster.metadata.namespaces.user }}
+  
