--- a/microservices/app/k8s.yaml
+++ b/microservices/app/k8s.yaml
@@ -11,7 +11,7 @@ items:
     namespace: '{{ cluster.metadata.namespaces.user }}'
   spec:
     replicas: 1
-    strategy: '{}'
+    strategy: {}
     template:
       metadata:
         creationTimestamp: null
@@ -30,10 +30,10 @@ items:
           ports:
           - containerPort: 8080
             protocol: TCP
-          resources: '{}'
-        securityContext: '{}'
+          resources: {}
+        securityContext: {}
         terminationGracePeriodSeconds: 0
-  status: '{}'
+  status: {}
 - apiVersion: v1
   kind: Service
   metadata:
@@ -52,6 +52,6 @@ items:
       app: app
     type: ClusterIP
   status:
-    loadBalancer: '{}'
+    loadBalancer: {}
 kind: List
-metadata: '{}'
+metadata: {}
