Fix templating error (#9)
* DeploymentPush

* Added quotes around the template values

--- a/microservices/app/k8s.yaml
+++ b/microservices/app/k8s.yaml
@@ -24,7 +24,7 @@ items:
           - name: PRODUCTION
             value: "true"
           - name: CLUSTER_NAME 
-            value: {{ cluster.name }}
+            value: '{{ cluster.name }}'
           imagePullPolicy: IfNotPresent
           name: app
           ports:
